@@ -42,7 +42,6 @@ setup(name='plone.app.vocabularies',
         'zope.site',
         'zope.app.form',
         'Acquisition',
-        'Products.Archetypes',
         'Products.CMFCore',
         'Zope2',
       ],
